# sopot

./: .gitignore  ALGORITHMIC_OPTIMIZATION_ANALYSIS.md  BUILD_INSTRUCTIONS.md  CLAUDE.md  CMakeLists.txt  COMPILATION.md  DEPLOYMENT.md  GITHUB_PAGES_SETUP.md  GRID_SIZE_LIMITS.md  LICENSE  PHYSICS_VERIFICATION_REPORT.md  PIPELINE.md  PR_DESCRIPTION.md  README.md  SESSION_SUMMARY.md  SOPOT_PRINCIPLES_AUDIT_REPORT.md  WASM_BUILD_GUIDE.md  WEBASSEMBLY_INVESTIGATION.md  WEBASSEMBLY_PHASE1_COMPLETE.md  build-wasm.sh  verify_physics.py  wasm_exact_test
.github/workflows/: ci.yml  deploy-github-pages.yml
core/: dual.hpp  linearization.hpp  pch.hpp  scalar.hpp  solver.hpp  stability.hpp  state_function_tags.hpp  typed_component.hpp  units.hpp
docs/: 2D_GRID_SIMULATION.md  ACAUSAL_MODELING.md  ARCHITECTURE.md  ARCHITECTURE_V2_PROPOSAL.md  COMPILER_ANALOGY.md  COMPONENT_GUIDELINES.md  FILAMENT_WINDING.md  FUTURE_VISION.md  MATRIX_CONNECTIVITY_INVESTIGATION.md  PHASE_3_ROADMAP.md  ROADMAP.md  UNIFIED_GRAPH_ARCHITECTURE.md
docs/publications/: CRITICAL_REVIEW_RESPONSE.md  PUBLICATION_ROADMAP.md  REVISED_PUBLICATION_ROADMAP.md  icms-2026-compile-time-cas.md  pldi-2026-zero-overhead-composition.md
examples/: reflect_two_masses.cpp  symbolic_cas_demo.cpp  whip_crack.cpp
experimental/: auto_derivatives.hpp  auto_system.hpp  auto_system_demo.cpp  field_based_component.hpp  field_based_component_simple.hpp  field_reflection.hpp  simple_reactor_demo.cpp  simple_reactor_example.cpp  system_builder.hpp  system_builder_demo.cpp  topological_sort.hpp
io/: csv_parser.hpp  interpolation.hpp
physics/: harmonic_oscillator.hpp
physics/acausal/: causality.hpp  component.hpp  connector.hpp  system.hpp
physics/connected_masses/: connectivity_matrix.hpp  connectivity_matrix_2d.hpp  force_aggregator.hpp  force_aggregator_2d.hpp  grid_2d.hpp  indexed_point_mass.hpp  indexed_point_mass_2d.hpp  indexed_spring.hpp  indexed_spring_2d.hpp  indexed_tags.hpp  indexed_tags_2d.hpp  tags.hpp
physics/constraints/symbolic/: differentiation.hpp  expression.hpp  named_expression.hpp
physics/control/: cart_double_pendulum.hpp  cart_n_pendulum.hpp  control_tags.hpp  lqr.hpp  state_feedback_controller.hpp
physics/coupled_oscillator/: coupled_system.hpp  energy_monitor.hpp  point_mass.hpp  spring.hpp  tags.hpp
physics/kink_chain/: README.md  kink_system.hpp  rotational_segment.hpp  tags.hpp  torsional_spring.hpp
physics/pendulum/: cartesian_pendulum.hpp  double_pendulum.hpp  named_constraint_pendulum.hpp  symbolic_cartesian_pendulum.hpp  tags.hpp
physics/unified/: components.hpp  constexpr_topology.hpp  graph_system.hpp  state_functions.hpp  validated_system.hpp
reflect/: core.hpp  test_p2996.cpp  test_p2996_full.cpp  two_masses.hpp
rocket/: axisymmetric_aero.hpp  force_aggregator.hpp  gravity.hpp  interpolated_engine.hpp  planar_engagement.hpp  quaternion.hpp  rocket.hpp  rocket_body.hpp  rocket_tags.hpp  rotation_dynamics.hpp  rotation_kinematics.hpp  simulation_result.hpp  simulation_time.hpp  standard_atmosphere.hpp  translation_dynamics.hpp  translation_kinematics.hpp  vector3.hpp  vehicle_tags.hpp
src/: core_instantiations.cpp  physics_instantiations.cpp  rocket_instantiations.cpp
tests/: acausal_system_test.cpp  acausal_test.cpp  autodiff_test.cpp  compile_time_test.cpp  connected_masses_test.cpp  connected_masses_validation_test.cpp  coupled_oscillator_test.cpp  double_pendulum_test.cpp  engagement_2d_test.cpp  grid_2d_test.cpp  inverted_pendulum_test.cpp  kink_chain_test.cpp  named_expression_test.cpp  rocket_flight_test.cpp  stability_compile_test.cpp  stability_test.cpp  symbolic_diff_test.cpp  triangle_grid_compilation_benchmark.cpp  triangle_grid_test.cpp  unified_compile_time_test.cpp  unified_scalability_test.cpp  validated_graph_test.cpp  verify_damping.cpp  verify_grid_physics.cpp  wasm_exact_test.cpp
wasm/: .gitignore  CMakeLists.txt  README.md  build.sh  test.html  wasm_grid2d.cpp  wasm_inverted_pendulum.cpp  wasm_rocket.cpp
web/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  test-wasm-load.mjs  vite.config.ts
web/public/: test-wasm.html  winding.html
web/src/: App.tsx  main.tsx
web/src/components/: BottomSheet.tsx  ControlPanel.tsx  ErrorBoundary.tsx  FloatingActionButton.tsx  Grid2DControlPanel.tsx  Grid2DVisualization.tsx  InvertedPendulumControlPanel.tsx  InvertedPendulumVisualization.tsx  PlotPanel.tsx  RocketVisualization3D.tsx  SimulationSelector.tsx  StatusBadge.tsx  TelemetryPanel.tsx  WasmErrorFallback.tsx
web/src/components/icons/: Icons.tsx
web/src/hooks/: useBottomSheet.ts  useGrid2DSimulation.ts  useInvertedPendulumSimulation.ts  useRocketSimulation.ts
web/src/styles/: responsive.css
web/src/types/: sopot.d.ts
web/src/utils/: wasmLoader.ts
web/tests/: simulation.spec.ts
